5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1808_2574.log
== TEST (2019-06-12 19:58:47) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()==8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:59:26) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:59:39) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
File "XXXX", line 4
    print("SENHA VALIDA")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:59:53) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:46:24) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.723222
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:47:22) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:47:57) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.6878
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:48:03) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()==8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:48:14) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()==8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.767266
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:53:17) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()==1):
		print("SENHA VALIDA")
	if(a[i].isupper(==1)):	
		print("SENHA VALIDA")
	if(a[i]==8)	:
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
File "XXXX", line 5
    if(a[i].isupper(==1)):	
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:53:36) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()==1):
		print("SENHA VALIDA")
	if(a[i].isupper()==1):	
		print("SENHA VALIDA")
	if(a[i]==8)	:
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA VALIDA
SENHA VALIDA
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:54:23) 
-- CODE:
a=input("string: ")
for i in len(a):
	if(a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in len(a):
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:55:46) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()==1 and a[i].isupper()==1 and a[i]>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:55:58) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].islower()==1 and a[i].isupper()==1 and a[i]>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.785227
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:05:26) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].isupper()==1 and a[i]>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(a[i].isupper()==1 and a[i].isupper()==1 and a[i]>=8):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:05:57) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- OUTPUT:
SENHA INVALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:06:08) 
-- CODE:
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.729356
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:06:33) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:06:46) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
1.29094
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:07:57) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
1.2899
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:11:29) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>=8):
	if(a[i].isupper()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:11:49) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>=8):
	if(a[i].isupper()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.933335
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:12:12) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>1):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:12:34) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>1):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
	print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:12:55) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>1):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
		print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:13:28) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.933354
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:22:36) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>1):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:23:09) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)>1):
	if(a[i].isupper()==8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:24:34) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].islower()==1 and a[i]>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:25:28) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(8)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:26:01) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:26:31) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)>=8):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:28:49) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a))>=8:
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:29:09) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)<8):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:31:48) 
-- CODE:
from numpy import*
a=input("string: ")

for i in len(a)>=8:
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:32:51) 
-- CODE:
from numpy import*
a=input("string: ")

for i in len(a):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:36:56) 
-- CODE:
from numpy import*
a=input("string: ")

for i in len(a):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:37:12) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()>=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:37:31) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()<8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:37:47) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()<=8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:38:16) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()>=8):
print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
File "XXXX", line 6
    print("SENHA VALIDA")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:38:44) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()==8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:39:04) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)):
	if(a[i].isupper()==8):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
1.1079
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:40:34) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)>=8):
	if(a[i].isupper()==1 or a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:41:12) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)>8):
	if(a[i].isupper()==1 or a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:41:29) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)<8):
	if(a[i].isupper()==1 or a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:41:30) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)<8):
	if(a[i].isupper()==1 or a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.92125
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
string: SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
string: SENHA INVALIDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:41:42) 
-- CODE:
from numpy import*
a=input("string: ")

for i in range(len(a)<=8):
	if(a[i].isupper()==1 or a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:42:58) 
-- CODE:
from numpy import*
a=input("string: ")
n=8
for i in range(len(a)):
	if(a[i].isupper()==1 or a[i].islower()==1):
		n[8]=n[8]+1
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:43:47) 
-- CODE:
from numpy import*
a=input("string: ")
n=zeros(8)
for i in range(len(a)):
	if(a[i].isupper()==1 or a[i].islower()==1):
		n[0]=n[0]+1
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:30) 
-- CODE:
from numpy import*
a=array(eval(input("string: ")))
for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:42) 
-- CODE:
from numpy import*
a=array(eval(input("string: ")))
for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:14) 
-- CODE:
from numpy import*
a=array(eval(input("string: ")))
for i in len(a):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:36) 
-- CODE:
from numpy import*
a=input("string: ")
for i in len(a):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:24) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a>=8)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:42) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a>8)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:20) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:20:37) 
-- CODE:
from numpy import*
a=input("string: ")
for i in range(len(a)):
	if(a[i].isupper()==1 and a[i].islower()==1):
		print("SENHA VALIDA")
print("SENHA INVALIDA")
-- EXECUTION TIME:
0.853687
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
